Squash sunken ship rendering bugs

--- a/src/styles/battleScreen.scss
+++ b/src/styles/battleScreen.scss
@@ -12,6 +12,6 @@
         background-color: $red;
     }
     &.isSunk {
-        background-color: black;
+        background-color: #2d8a98;
     }
 }
